<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout android:id="@+id/lyt_uuid"
    	android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:orientation="horizontal" >
        
	    <TextView android:id="@+id/txt_uuid_lbl"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/uuid" />
	    
	    <TextView android:id="@+id/txt_uuid"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="12sp" />
    </LinearLayout>
    
	<LinearLayout android:id="@+id/lyt_plate"
    	android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:layout_below="@id/lyt_uuid" >
        
	    <TextView android:id="@+id/txt_plate"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/plate" />
	    
	    <EditText android:id="@+id/et_plate"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/plate_hint"
	        android:textSize="12sp" />
	    
    </LinearLayout>
    
    <LinearLayout android:id="@+id/lyt_conn"
    	android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:orientation="horizontal"
        android:layout_below="@id/lyt_plate" >
        
	    <TextView android:id="@+id/txt_conn_lbl"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/conn" />
	    
	    <TextView android:id="@+id/txt_conn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="12sp" />
    </LinearLayout>
    
    <LinearLayout android:id="@+id/lyt_obd2"
    	android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:orientation="horizontal"
        android:layout_below="@id/lyt_conn" >
        
	    <TextView android:id="@+id/txt_obd2_lbl"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/obd2" />
	    
	    <TextView android:id="@+id/txt_obd2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="12sp" />
    </LinearLayout>
    
    <LinearLayout android:id="@+id/lyt_servicebtns" 
       		android:orientation="horizontal" 
	    	android:layout_centerHorizontal="true"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
        	android:layout_below="@id/lyt_obd2"
        	android:paddingBottom="12dp" >
	    
	    <Button android:id="@+id/btn_startservice"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/startservice" />
	    
	    <Button android:id="@+id/btn_stopservice"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/stopservice" />
	    
    </LinearLayout>

</RelativeLayout>
